kubernetes/app-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deploy
  labels:
    app: backend-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-app
  template:
    metadata:
      labels:
        app: backend-app
    spec:
      containers:
        - name: backend-container
          image: hendisantika/spring-boot-k8s
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
