kubernetes/mysql-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysqldb
  labels:
    name: mysql-service
spec:
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: mysqldb
